# v-center from stackoverflow

--- a/index.html
+++ b/index.html
@@ -2,54 +2,53 @@
 <head>
   <style type="text/css">
 
-  #card{
-        margin: 0 auto;
-        padding: 1em;
-        background-color:rgba(0,0,0,0.1);
-        border-radius: 1.5em;
-        color: #fefefe;
+  div.outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+  }
 
-        overflow: auto;
-        position: absolute;
+  div.middle {
+    display: table-cell;
+    vertical-align: middle;
+  }
 
-        left: 50%;
-        top: 50%;
-        width:auto;
-        height:auto;
-        max-height: 80%;
-        min-width:33%;
+  #logo {
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
+    width:30%;
+    background-color:rgba(0,0,0,0.2);
+    border-radius: 0.7em;
+    padding: 1em;
+    color: #fefefe;
+  }
 
-        text-align: center;
+  #codec, #code {
+    text-shadow:0 1px 2px #333;
+    font-size:300%;
+  }
 
-        -webkit-transform: translate(-50%, -50%);
-        -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        -o-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
+  #codec {
+    color: #2D8EDF;
+  }
 
-        transition: height 1s ease;
-        transition: top 1s ease;
-    }
-
-    #codec {
-        text-shadow:0 1px 2px #333;
-        font-size:300%;
-        color: #2D8EDF;
-        #background: #2D8EDF;
-    }
-
-    #code {
-      text-shadow:0 1px 2px #333;
-      font-size:300%;
-      color: #000000;
-      #background: #189720;
-    }
+  #code {
+    color: #000000;
+  }
   </style>
 </head>
 
 <body>
-  <div id="card">
-    <span id="codec">codec</span><span id="code">code</span>
+  <div class="outer">
+    <div class="middle">
+      <div id="logo">
+
+        <span id="codec">codec</span><span id="code">code</span>
+
+      </div>
+    </div>
   </div>
 </body>
 </html>
